--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="content"></div>
+    <div id="content">
+
+    </div>
+    
 </body>
 </html>
