add inputModals module, begin making input modal
- create inputModals module to handle User Input
- add logic framework for modal buttons

--- a/src/template.html
+++ b/src/template.html
@@ -6,9 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <dialog id="userInputDialog">
+        <button id="addBtn">Add</button>
+        <button id="cancelBtn">Cancel</button>
+    </dialog>
     <div id="content">
 
+        <button class="newToDoButton">New ToDo</button>
+        <button id="newProjectButton">New Project</button>
+
     </div>
-    
 </body>
 </html>
