add content population for modal
- based population information on the button pressed
- reformatted addElementToParent() for readability
- added datalist for "priority" input range
- next goal is to assess whether to extract inputModals from
    inputWindowController

--- a/src/template.html
+++ b/src/template.html
@@ -7,14 +7,23 @@
 </head>
 <body>
     <dialog id="userInputDialog">
+        <form id="modalContent"></form>
+        <datalist id="markers">
+            <option value="0"></option>
+            <option value="1"></option>
+            <option value="2"></option>
+            <option value="3"></option>
+            <option value="4"></option>
+            <option value="5"></option>
+        </datalist>
         <button id="addBtn">Add</button>
         <button id="cancelBtn">Cancel</button>
     </dialog>
     <div id="content">
 
         <button class="newToDoButton">New ToDo</button>
-        <button id="newProjectButton">New Project</button>
-
+        
     </div>
+    <button id="newProjectButton">New Project</button>
 </body>
 </html>
